# TinyChatServer

./: CMakeLists.txt  README.md
TinyChatServer/: autobuild.sh
TinyChatServer/include/server/: chatservice.hpp
TinyChatServer/include/server/model/: friendmodel.hpp  group.hpp  user.hpp  usermodel.hpp
TinyChatServer/notes/: 业务流程.vsdx  总结.md
TinyChatServer/src/client/: CMakeLists.txt
TinyChatServer/src/server/: chatserver.cpp  chatservice.cpp  main.cpp
TinyChatServer/src/server/model/: offlinemessagemodel.cpp  usermodel.cpp
TinyChatServer/src/server/redis/: redis.cpp
include/: public.hpp
include/server/: chatserver.hpp
include/server/db/: db.h
include/server/model/: groupmodel.hpp  groupuser.hpp  offlinemessagemodel.hpp
include/server/redis/: redis.hpp
src/client/: main.cpp
src/server/: CMakeLists.txt
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp
